--- a/index.html
+++ b/index.html
@@ -4,13 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ACDI/VOCA</title>
+    <link rel="Stylesheet" href="./css/style.css" />
+    <title>maquetacion</title>
 </head>
 <body>
-    
-
-
-
-
+    <div id="azul">
+    <p>soy azul</p>
+    </div>
+    <div id="negro">
+    <p>soy negro</p> 
+    </div>
+    <div id="verde">
+    <p>soy verde</p>
+    </div>
+    <div id="naranjado">
+    <p>soy naranjado</p>
+    </div>
+    <div id="amarrillo">
+    <p>soy amarrillo</p>
+    </div>
+    <div id="rojo">
+    <p>soy rojo</p>
+    </div>
+    <div id="morado">
+    <p>soy morado</p>
+    </div>
+    <div id="rosado">
+    <p>soy rosado</p>
+    </div>
+    <div id="cielo">
+    <p>soy cielo</p>
+    </div>
+    <div id="cafe">
+    <p>soy cafe</p>
+    </div>
+    <div id="crema">
+    <p>soy crema</p>
+    </div>
 </body>
 </html>
